build/lexer.c
/* Generated by re2c 4.3 on Wed Nov 19 01:23:16 2025 */
#line 1 "src/lexer.re"
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include "ast.h"
#include "parser.h"

int yylineno = 1;
int yycolno = 1;
int line_terminator_seen = 0;
int lookahead_token = 0;

// 1 = 下一个 '/' 是正则 (如: a = /.../)
// 0 = 下一个 '/' 是除法 (如: a / b)
int allow_regex = 1; 

extern YYSTYPE yylval;

const char *cursor;
const char *limit;
const char *marker;
const char *token;

void init_lexer(const char *input) {
    cursor = input;
    limit = input + strlen(input);
    token = cursor;
    yylineno = 1;
    yycolno = 1;
    line_terminator_seen = 0;
    lookahead_token = 0;
    allow_regex = 1;
}

// 辅助宏
#define SET_REGEX_ALLOWED(val) allow_regex = val
#define RETURN_TOKEN(t) do { lookahead_token = t; return t; } while(0)

int yylex(void) {
    int yyleng;

    // --- 修复点：必须在这里定义 re2c 用于操作指针的宏 ---
    #define YYCTYPE char
    #define YYCURSOR cursor
    #define YYLIMIT limit
    #define YYMARKER marker
    #define YYFILL(n)
    // ------------------------------------------------

start:
    token = cursor;

    
#line 56 "build/lexer.c"
{
	char yych;
	unsigned int yyaccept = 0;
	yych = *YYCURSOR;
	switch (yych) {
		case 0x00: goto yy1;
		case '\t':
		case '\r':
		case ' ': goto yy4;
		case '\n': goto yy6;
		case '!': goto yy7;
		case '"': goto yy9;
		case '$':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'g':
		case 'h':
		case 'j':
		case 'k':
		case 'm':
		case 'p':
		case 'q':
		case 'u':
		case 'x':
		case 'y':
		case 'z': goto yy10;
		case '%': goto yy13;
		case '&': goto yy15;
		case '\'': goto yy17;
		case '(': goto yy18;
		case ')': goto yy19;
		case '*': goto yy20;
		case '+': goto yy22;
		case ',': goto yy24;
		case '-': goto yy25;
		case '.': goto yy27;
		case '/': goto yy29;
		case '0': goto yy31;
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy33;
		case ':': goto yy35;
		case ';': goto yy36;
		case '<': goto yy37;
		case '=': goto yy39;
		case '>': goto yy41;
		case '?': goto yy43;
		case '[': goto yy44;
		case ']': goto yy45;
		case '^': goto yy46;
		case '`': goto yy48;
		case 'b': goto yy49;
		case 'c': goto yy50;
		case 'd': goto yy51;
		case 'e': goto yy52;
		case 'f': goto yy53;
		case 'i': goto yy54;
		case 'l': goto yy55;
		case 'n': goto yy56;
		case 'o': goto yy57;
		case 'r': goto yy58;
		case 's': goto yy59;
		case 't': goto yy60;
		case 'v': goto yy61;
		case 'w': goto yy62;
		case '{': goto yy63;
		case '|': goto yy64;
		case '}': goto yy66;
		case '~': goto yy67;
		default: goto yy2;
	}
yy1:
	++YYCURSOR;
#line 58 "src/lexer.re"
	{ RETURN_TOKEN(END); }
#line 164 "build/lexer.c"
yy2:
	++YYCURSOR;
yy3:
#line 221 "src/lexer.re"
	{ 
            fprintf(stderr, "Unexpected character: %c at line %d\n", *token, yylineno);
            goto start;
        }
#line 173 "build/lexer.c"
yy4:
	yych = *++YYCURSOR;
	switch (yych) {
		case '\t':
		case '\r':
		case ' ': goto yy4;
		default: goto yy5;
	}
yy5:
#line 61 "src/lexer.re"
	{ goto start; }
#line 185 "build/lexer.c"
yy6:
	++YYCURSOR;
#line 64 "src/lexer.re"
	{ yylineno++; yycolno = 1; line_terminator_seen = 1; goto start; }
#line 190 "build/lexer.c"
yy7:
	yych = *++YYCURSOR;
	switch (yych) {
		case '=': goto yy68;
		default: goto yy8;
	}
yy8:
#line 215 "src/lexer.re"
	{ SET_REGEX_ALLOWED(1); RETURN_TOKEN(NOT); }
#line 200 "build/lexer.c"
yy9:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 0x00:
		case '\n': goto yy3;
		default: goto yy71;
	}
yy10:
	yych = *++YYCURSOR;
yy11:
	switch (yych) {
		case '$':
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy10;
		default: goto yy12;
	}
yy12:
#line 150 "src/lexer.re"
	{ 
            yyleng = cursor - token; yylval.str = strndup(token, yyleng); 
            SET_REGEX_ALLOWED(0);
            RETURN_TOKEN(IDENTIFIER); 
        }
#line 286 "build/lexer.c"
yy13:
	yych = *++YYCURSOR;
	switch (yych) {
		case '=': goto yy75;
		default: goto yy14;
	}
yy14:
#line 211 "src/lexer.re"
	{ SET_REGEX_ALLOWED(1); RETURN_TOKEN(MOD); }
#line 296 "build/lexer.c"
yy15:
	yych = *++YYCURSOR;
	switch (yych) {
		case '&': goto yy76;
		case '=': goto yy77;
		default: goto yy16;
	}
yy16:
#line 212 "src/lexer.re"
	{ SET_REGEX_ALLOWED(1); RETURN_TOKEN(BITWISE_AND); }
#line 307 "build/lexer.c"
yy17:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 0x00:
		case '\n': goto yy3;
		default: goto yy79;
	}
yy18:
	++YYCURSOR;
#line 198 "src/lexer.re"
	{ line_terminator_seen = 0; SET_REGEX_ALLOWED(1); RETURN_TOKEN(LPAREN); }
#line 320 "build/lexer.c"
yy19:
	++YYCURSOR;
#line 199 "src/lexer.re"
	{ line_terminator_seen = 0; SET_REGEX_ALLOWED(0); RETURN_TOKEN(RPAREN); }
#line 325 "build/lexer.c"
yy20:
	yych = *++YYCURSOR;
	switch (yych) {
		case '=': goto yy82;
		default: goto yy21;
	}
yy21:
#line 210 "src/lexer.re"
	{ SET_REGEX_ALLOWED(1); RETURN_TOKEN(MULTIPLY); }
#line 335 "build/lexer.c"
yy22:
	yych = *++YYCURSOR;
	switch (yych) {
		case '+': goto yy83;
		case '=': goto yy84;
		default: goto yy23;
	}
yy23:
#line 208 "src/lexer.re"
	{ SET_REGEX_ALLOWED(1); RETURN_TOKEN(PLUS); }
#line 346 "build/lexer.c"
yy24:
	++YYCURSOR;
#line 204 "src/lexer.re"
	{ line_terminator_seen = 0; SET_REGEX_ALLOWED(1); RETURN_TOKEN(COMMA); }
#line 351 "build/lexer.c"
yy25:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy85;
		case '=': goto yy86;
		default: goto yy26;
	}
yy26:
#line 209 "src/lexer.re"
	{ SET_REGEX_ALLOWED(1); RETURN_TOKEN(MINUS); }
#line 362 "build/lexer.c"
yy27:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case '.': goto yy87;
		default: goto yy28;
	}
yy28:
#line 202 "src/lexer.re"
	{ line_terminator_seen = 0; SET_REGEX_ALLOWED(1); RETURN_TOKEN(DOT); }
#line 373 "build/lexer.c"
yy29:
	yyaccept = 2;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case '*': goto yy88;
		case '/': goto yy89;
		case '=': goto yy91;
		default: goto yy30;
	}
yy30:
#line 157 "src/lexer.re"
	{
            if (allow_regex) {
                cursor = token; // Rewind to include the first slash
                goto regex_state;
            } else {
                SET_REGEX_ALLOWED(1);
                RETURN_TOKEN(DIVIDE);
            }
        }
#line 394 "build/lexer.c"
yy31:
	yyaccept = 3;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 'x': goto yy94;
		default: goto yy34;
	}
yy32:
#line 120 "src/lexer.re"
	{ 
            yyleng = cursor - token; yylval.str = strndup(token, yyleng); 
            SET_REGEX_ALLOWED(0); 
            RETURN_TOKEN(NUMBER); 
        }
#line 409 "build/lexer.c"
yy33:
	yyaccept = 3;
	yych = *(YYMARKER = ++YYCURSOR);
yy34:
	switch (yych) {
		case '.': goto yy92;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy33;
		case 'E':
		case 'e': goto yy93;
		default: goto yy32;
	}
yy35:
	++YYCURSOR;
#line 218 "src/lexer.re"
	{ SET_REGEX_ALLOWED(1); RETURN_TOKEN(COLON); }
#line 434 "build/lexer.c"
yy36:
	++YYCURSOR;
#line 203 "src/lexer.re"
	{ line_terminator_seen = 0; SET_REGEX_ALLOWED(1); RETURN_TOKEN(SEMICOLON); }
#line 439 "build/lexer.c"
yy37:
	yych = *++YYCURSOR;
	switch (yych) {
		case '<': goto yy95;
		case '=': goto yy97;
		default: goto yy38;
	}
yy38:
#line 206 "src/lexer.re"
	{ SET_REGEX_ALLOWED(1); RETURN_TOKEN(LT); }
#line 450 "build/lexer.c"
yy39:
	yych = *++YYCURSOR;
	switch (yych) {
		case '=': goto yy98;
		case '>': goto yy100;
		default: goto yy40;
	}
yy40:
#line 219 "src/lexer.re"
	{ SET_REGEX_ALLOWED(1); RETURN_TOKEN(ASSIGN); }
#line 461 "build/lexer.c"
yy41:
	yych = *++YYCURSOR;
	switch (yych) {
		case '=': goto yy101;
		case '>': goto yy102;
		default: goto yy42;
	}
yy42:
#line 207 "src/lexer.re"
	{ SET_REGEX_ALLOWED(1); RETURN_TOKEN(GT); }
#line 472 "build/lexer.c"
yy43:
	++YYCURSOR;
#line 217 "src/lexer.re"
	{ SET_REGEX_ALLOWED(1); RETURN_TOKEN(QUESTION); }
#line 477 "build/lexer.c"
yy44:
	++YYCURSOR;
#line 200 "src/lexer.re"
	{ line_terminator_seen = 0; SET_REGEX_ALLOWED(1); RETURN_TOKEN(LBRACKET); }
#line 482 "build/lexer.c"
yy45:
	++YYCURSOR;
#line 201 "src/lexer.re"
	{ line_terminator_seen = 0; SET_REGEX_ALLOWED(0); RETURN_TOKEN(RBRACKET); }
#line 487 "build/lexer.c"
yy46:
	yych = *++YYCURSOR;
	switch (yych) {
		case '=': goto yy104;
		default: goto yy47;
	}
yy47:
#line 214 "src/lexer.re"
	{ SET_REGEX_ALLOWED(1); RETURN_TOKEN(BITWISE_XOR); }
#line 497 "build/lexer.c"
yy48:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych <= 0x00) goto yy3;
	goto yy106;
yy49:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'r': goto yy109;
		default: goto yy11;
	}
yy50:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'a': goto yy110;
		case 'l': goto yy111;
		case 'o': goto yy112;
		default: goto yy11;
	}
yy51:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'e': goto yy113;
		case 'o': goto yy114;
		default: goto yy11;
	}
yy52:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'l': goto yy116;
		case 'x': goto yy117;
		default: goto yy11;
	}
yy53:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'a': goto yy118;
		case 'i': goto yy119;
		case 'o': goto yy120;
		case 'u': goto yy121;
		default: goto yy11;
	}
yy54:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'f': goto yy122;
		case 'm': goto yy124;
		case 'n': goto yy125;
		default: goto yy11;
	}
yy55:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'e': goto yy127;
		default: goto yy11;
	}
yy56:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'e': goto yy128;
		case 'u': goto yy129;
		default: goto yy11;
	}
yy57:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'f': goto yy130;
		default: goto yy11;
	}
yy58:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'e': goto yy132;
		default: goto yy11;
	}
yy59:
	yych = *++YYCURSOR;
	switch (yych) {
		case 't': goto yy133;
		case 'u': goto yy134;
		case 'w': goto yy135;
		default: goto yy11;
	}
yy60:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'h': goto yy136;
		case 'r': goto yy137;
		case 'y': goto yy138;
		default: goto yy11;
	}
yy61:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'a': goto yy139;
		case 'o': goto yy140;
		default: goto yy11;
	}
yy62:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'h': goto yy141;
		case 'i': goto yy142;
		default: goto yy11;
	}
yy63:
	++YYCURSOR;
#line 196 "src/lexer.re"
	{ line_terminator_seen = 0; SET_REGEX_ALLOWED(1); RETURN_TOKEN(LBRACE); }
#line 607 "build/lexer.c"
yy64:
	yych = *++YYCURSOR;
	switch (yych) {
		case '=': goto yy143;
		case '|': goto yy144;
		default: goto yy65;
	}
yy65:
#line 213 "src/lexer.re"
	{ SET_REGEX_ALLOWED(1); RETURN_TOKEN(BITWISE_OR); }
#line 618 "build/lexer.c"
yy66:
	++YYCURSOR;
#line 197 "src/lexer.re"
	{ line_terminator_seen = 0; SET_REGEX_ALLOWED(0); RETURN_TOKEN(RBRACE); }
#line 623 "build/lexer.c"
yy67:
	++YYCURSOR;
#line 216 "src/lexer.re"
	{ SET_REGEX_ALLOWED(1); RETURN_TOKEN(BITWISE_NOT); }
#line 628 "build/lexer.c"
yy68:
	yych = *++YYCURSOR;
	switch (yych) {
		case '=': goto yy145;
		default: goto yy69;
	}
yy69:
#line 182 "src/lexer.re"
	{ SET_REGEX_ALLOWED(1); RETURN_TOKEN(NE); }
#line 638 "build/lexer.c"
yy70:
	yych = *++YYCURSOR;
yy71:
	switch (yych) {
		case 0x00:
		case '\n': goto yy72;
		case '"': goto yy73;
		case '\\': goto yy74;
		default: goto yy70;
	}
yy72:
	YYCURSOR = YYMARKER;
	switch (yyaccept) {
		case 0: goto yy3;
		case 1: goto yy28;
		case 2: goto yy30;
		default: goto yy32;
	}
yy73:
	++YYCURSOR;
#line 132 "src/lexer.re"
	{ 
            yyleng = cursor - token; yylval.str = strndup(token, yyleng); 
            SET_REGEX_ALLOWED(0); 
            RETURN_TOKEN(STRING); 
        }
#line 665 "build/lexer.c"
yy74:
	yych = *++YYCURSOR;
	if (yych <= 0x00) goto yy72;
	goto yy70;
yy75:
	++YYCURSOR;
#line 191 "src/lexer.re"
	{ SET_REGEX_ALLOWED(1); RETURN_TOKEN(MOD_ASSIGN); }
#line 674 "build/lexer.c"
yy76:
	++YYCURSOR;
#line 185 "src/lexer.re"
	{ SET_REGEX_ALLOWED(1); RETURN_TOKEN(LOGICAL_AND); }
#line 679 "build/lexer.c"
yy77:
	++YYCURSOR;
#line 192 "src/lexer.re"
	{ SET_REGEX_ALLOWED(1); RETURN_TOKEN(AND_ASSIGN); }
#line 684 "build/lexer.c"
yy78:
	yych = *++YYCURSOR;
yy79:
	switch (yych) {
		case 0x00:
		case '\n': goto yy72;
		case '\'': goto yy80;
		case '\\': goto yy81;
		default: goto yy78;
	}
yy80:
	++YYCURSOR;
#line 137 "src/lexer.re"
	{ 
            yyleng = cursor - token; yylval.str = strndup(token, yyleng); 
            SET_REGEX_ALLOWED(0); 
            RETURN_TOKEN(STRING); 
        }
#line 703 "build/lexer.c"
yy81:
	yych = *++YYCURSOR;
	if (yych <= 0x00) goto yy72;
	goto yy78;
yy82:
	++YYCURSOR;
#line 189 "src/lexer.re"
	{ SET_REGEX_ALLOWED(1); RETURN_TOKEN(MULTIPLY_ASSIGN); }
#line 712 "build/lexer.c"
yy83:
	++YYCURSOR;
#line 183 "src/lexer.re"
	{ SET_REGEX_ALLOWED(0); RETURN_TOKEN(INCR); }
#line 717 "build/lexer.c"
yy84:
	++YYCURSOR;
#line 187 "src/lexer.re"
	{ SET_REGEX_ALLOWED(1); RETURN_TOKEN(PLUS_ASSIGN); }
#line 722 "build/lexer.c"
yy85:
	++YYCURSOR;
#line 184 "src/lexer.re"
	{ SET_REGEX_ALLOWED(0); RETURN_TOKEN(DECR); }
#line 727 "build/lexer.c"
yy86:
	++YYCURSOR;
#line 188 "src/lexer.re"
	{ SET_REGEX_ALLOWED(1); RETURN_TOKEN(MINUS_ASSIGN); }
#line 732 "build/lexer.c"
yy87:
	yych = *++YYCURSOR;
	switch (yych) {
		case '.': goto yy146;
		default: goto yy72;
	}
yy88:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x00: goto yy72;
		case '*': goto yy147;
		default: goto yy88;
	}
yy89:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x00:
		case '\n': goto yy90;
		default: goto yy89;
	}
yy90:
#line 67 "src/lexer.re"
	{ goto start; }
#line 756 "build/lexer.c"
yy91:
	++YYCURSOR;
#line 190 "src/lexer.re"
	{ SET_REGEX_ALLOWED(1); RETURN_TOKEN(DIVIDE_ASSIGN); }
#line 761 "build/lexer.c"
yy92:
	yych = *++YYCURSOR;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy148;
		default: goto yy72;
	}
yy93:
	yych = *++YYCURSOR;
	switch (yych) {
		case '+':
		case '-': goto yy149;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
